[package]
name = "heterogeneous_hash_map"
version = "1.3.0"
edition = "2024"
authors = ["LambdaXymox <lambda.xymox@gmail.com>"]
description = "A cache-friendly hash map for working with heterogeneously typed data with limited reflection capabilities."
categories = [
    "data-structures",
    "no-std",
]
keywords = [
    "no_std",
    "heterogeneous",
    "containers",
]
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/lambdaxymox/heterogeneous_hash_map"

[lib]
name = "heterogeneous_hash_map"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[features]
default = ["std"]
std = ["opaque/std"]
nightly = ["opaque/nightly"]

[dependencies]

[dependencies.opaque]
version = "1.3.0"
git = "https://github.com/lambdaxymox/opaque"

[dependencies.hashbrown]
version = "0.15.4"

[dev-dependencies]

[dev-dependencies.criterion]
version = "0.7.0"

[[bench]]
name = "bench_heterogeneous_hash_map"
harness = false
path = "benches/lib.rs"
